--- a/Assignments/hands_on_python_practice 1.ipynb
+++ b/Assignments/hands_on_python_practice 1.ipynb
@@ -399,12 +399,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "25de3093",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-06T17:52:41.463744100Z",
-     "start_time": "2025-03-06T17:52:41.154573Z"
+     "end_time": "2025-03-06T17:55:22.811259700Z",
+     "start_time": "2025-03-06T17:55:22.741077500Z"
     }
    },
    "outputs": [
@@ -412,7 +412,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<=50K\n"
+      "<=50K\n",
+      "Non-existent column!\n"
      ]
     }
    ],
@@ -420,6 +421,12 @@
     "# Your code here\n",
     "try:\n",
     "    print(df['salary'].iloc[0])\n",
+    "except KeyError:\n",
+    "    print('Non-existent column!')\n",
+    "    \n",
+    "# Salary was in the dataset, so here is a actually non-existing column:\n",
+    "try:\n",
+    "    print(df['non_existent'].iloc[0])\n",
     "except KeyError:\n",
     "    print('Non-existent column!')\n",
     "    "
